kubernetes/manifests/825354fe-c10b-49e1-84ff-48aaacfa9747/app1-825354.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-825354
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-825354
  template:
    metadata:
      labels:
        app: app1-825354
    spec:
      containers:
        - name: app1-825354
          image: zploy-app-825354fe-c10b-49e1-84ff-48aaacfa9747
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5006
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: app1-825354
  namespace: default
spec:
  selector:
    app: app1-825354
  ports:
    - port: 80
      targetPort: 5006
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-825354
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app1.zploy.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-825354
                port:
                  number: 80
